<?xml version="1.0"?>
<package format="2">
  <name>hardware_gzb</name>
  <version>0.0.0</version>
  <description>Library with classes for hardware</description>

  <maintainer email="k.cetin@hw.ac.uk">KC</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>serial_arm_lib</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>iiwa_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>copilotROSInterface</depend>
  <depend>underwater_sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
